# traffic_sms_notifier

./: .gitignore  LICENSE  README.md  main.py  package-lock.json  package.json  pyproject.toml
alembic/: env.py
alembic/versions/: 0ea358d22418_create_user_and_route_tables.py  7ae8eee13828_add_delay_and_distance_to_trafficlog.py  f97c0023ce23_add_alerts_table.py  fc8e73d37f8b_add_phone_number_to_user.py
api/: routes.py  test.py  token.py  user.py
app/: auth.py  config.py  main.py
backend/: .gitignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0ea358d22418_create_user_and_route_tables.py  20d761abb933_baseline_schema.py  7ae8eee13828_add_delay_and_distance_to_trafficlog.py  aaa3431aad8c_add_alerts_table.py
backend/api/: alerts.py  health.py  test.py  traffic.py  user.py
backend/app/: auth.py  config.py  main.py
backend/db/: engine.py  init_db.py  session.py
backend/models/: alerts.py  route.py  traffic.py
backend/scheduler/: traffic_scheduler.py
backend/schemas/: alerts.py  route.py
backend/services/: route_service.py
backend/services/alerts/: alert_service.py  sms_service.py
backend/tests/: conftest.py  test_auth.py  test_routes.py  test_traffic_client.py  test_traffic_logic.py
clients/: traffic_client.py
db/: engine.py  session.py
frontend/: index.html  package-lock.json  package.json
models/: route.py  traffic.py  user.py
scheduler/: traffic_scheduler.py
schemas/: traffic.py  user.py
services/: alert_service.py  sms_service.py  traffic_service.py
utils/: timezone.py
(+21 files in other folders)
